Modify: 다른 고객 추천 상품  목데이터에서 서버 데이터로 변경

--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -134,7 +134,7 @@
       }
 
       .recommendationList {
-        @include flex-center;
+        display: flex;
         justify-content: space-between;
 
         .recommendationWrap {
