--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -106,14 +106,19 @@
           display: flex;
           flex-direction: column;
           position: absolute;
-          top: 152px;
+          top: 147px;
           width: 160px;
           height: 330px;
           background-color: white;
           color: $font-gray;
 
-          li {
+          .color,
+          .align {
             padding: 20px 15px 15px 15px;
+          }
+
+          .color {
+            background-color: #dff9ec;
           }
 
           .menuBox {
