Add: link all pages

--- a/src/pages/Main/components/ProductList.scss
+++ b/src/pages/Main/components/ProductList.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/variables.scss';
 
-.ProductList {
-  margin-top: 124px;
+.ProductList2 {
   width: 100vw;
   display: flex;
   justify-content: center;
