--- a/src/pages/SubsList/SubsList.scss
+++ b/src/pages/SubsList/SubsList.scss
@@ -3,6 +3,7 @@
 .subsList {
   @include flex-center;
   flex-direction: column;
+  margin-bottom: 80px;
 
   .subsListHead {
     @include flex-center;
